--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.32.2
-pandas==2.2.2
+pandas>=2.0.0,<3.0.0
+pillow>=9.0.0,<10.0.0
 gspread==6.1.1
-gspread-dataframe==3.3.1
-reportlab==4.0.9
-Pillow==10.3.0
+gspread-dataframe==3.3.0
 requests==2.31.0
+reportlab==4.0.9
